--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.scss
@@ -91,3 +91,11 @@ td.mat-column-actions {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.assists-container > standard-flag {
+  margin: 0px $gap-small;
+}
+
+.mat-slide-toggle {
+  display: block;
+}
