fix view child bugh

--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
@@ -49,7 +49,7 @@
               </mat-slide-toggle>
             </div>
             <div class="date-range">
-              <mat-slide-toggle (change)="toggleDatetimeFilter($event)">
+              <mat-slide-toggle #dateSlideToggle (change)="toggleDatetimeFilter($event)">
                 Filter by date range
                 <help-popover-icon cardTitle="Leaderboard Date Filter">
                   <span
