--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
@@ -1,3 +1,4 @@
+{{formControls.localizedMessageId.errors | bigjson}}
 <form [formGroup]="newLocalizedMessageForm">
   <!-- <mat-form-field appearance="fill" class="localized-message">
     <mat-label
@@ -16,12 +17,8 @@
     ></textarea>
   </mat-form-field> -->
 
-  <mat-form-field appearance="fill" class="localized-message">
-    <mat-label
-      >Localized Message</mat-label
-    >
-    <select-localized-string [service]="service" formControlName="localizedMessageId"></select-localized-string>
-  </mat-form-field>
+  <select-localized-string [service]="service" [formControl]="formControls.localizedMessageId"></select-localized-string>
+  
 
   <datetime-range-picker
     [formControl]="formControls.dateRange"
