--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
@@ -1,6 +1,6 @@
-<mat-form-field class="localized-message-selector">
+<mat-form-field class="localized-message-selector" [formGroup]="formGroup">
   <mat-label>Select Localized Message</mat-label>
-  <mat-select (selectionChange)="onLocalizedStringSelect($event)">
+  <mat-select (selectionChange)="onLocalizedStringSelect($event)" [formControl]="formControls.selectedLocalizedStringId">
     <mat-option *ngFor="let stringDetails of localizedStringDetails" [value]="stringDetails.id">
       {{ stringDetails.text | deppoh }}
     </mat-option>
