working so well, why are disabled chips selectable?

--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="newLocalizedMessageForm">
+<form [formGroup]="formGroup">
   <select-localized-string [service]="service" [formControl]="formControls.localizedMessageId"></select-localized-string> 
 
   <datetime-range-picker
@@ -24,7 +24,7 @@
     mat-raised-button
     color="accent"
     (click)="createMessage()"
-    [disabled]="!newLocalizedMessageForm.valid"
+    [disabled]="!formGroup.valid"
   >
     Review <mat-icon svgIcon="steward-arrow-right"></mat-icon>
   </button>
