--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
@@ -9,10 +9,7 @@
 
 <p *ngIf="selectedLocalizedStringCollection">
   Language Codes:
-  <mat-chip-list
-    selectable="true"
-    multiple="false"
-    (change)="onLanguageChipSelect($event)">
+  <mat-chip-list selectable="true" multiple="false" (change)="onLanguageChipSelect($event)">
     <mat-chip
       #chipRef="matChip"
       (click)="stringInfo.translated ? chipRef.toggleSelected(true) : null"
@@ -21,8 +18,11 @@
       [value]="stringInfo"
       [disabled]="!stringInfo.translated"
       [selectable]="!stringInfo.translated"
-      [matTooltip]="stringInfo.translated ? 'Select to see preview' : 'This language is not yet translated'">
-        {{stringInfo.languageCode}}
+      [matTooltip]="
+        stringInfo.translated ? 'Select to see preview' : 'This language is not yet translated'
+      "
+    >
+      {{ stringInfo.languageCode }}
     </mat-chip>
   </mat-chip-list>
 </p>
@@ -30,7 +30,10 @@
 <mat-form-field
   *ngIf="selectedLanguageLocalizedString"
   class="translation-preview"
-  appearance="fill">
+  appearance="fill"
+>
   <mat-label>Translation Preview:</mat-label>
-  <textarea matInput disabled="true" cdkTextareaAutosize>{{selectedLanguageLocalizedString.message}}</textarea>
+  <textarea matInput disabled="true" cdkTextareaAutosize>{{
+    selectedLanguageLocalizedString.message
+  }}</textarea>
 </mat-form-field>
