mostly piped through the text, need to pick up between new message and send message, specifically emiting/reading a new type that includes the text alongside the message.

--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="formGroup">
   <select-localized-string
     [service]="service"
-    [formControl]="formControls.localizedMessageId"
+    [formControl]="formControls.localizedMessageInfo"
   ></select-localized-string>
 
   <datetime-range-picker
@@ -22,6 +22,8 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
+
+  <button mat-raised-button color="accent" (click)="debugForm()">Debug</button>
 
   <button mat-raised-button color="accent" (click)="createMessage()" [disabled]="!formGroup.valid">
     Review <mat-icon svgIcon="steward-arrow-right"></mat-icon>
