just revert is busted

--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
@@ -79,6 +79,12 @@
             {{ newLocalizedMessage.localizedMessageId }}
           </td>
         </tr>
+        <tr>
+          <th>English Text Preview:</th>
+          <td>
+            {{ newLocalizedMessage.englishText }}
+          </td>
+        </tr>
       </table>
       <section class="action-buttons">
         <button
