--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="localized-message-selector" [formGroup]="formGroup">
   <mat-label>Select Localized Message</mat-label>
-  <mat-select [formControl]="formControls.selectedLocalizedStringInfo">
+  <mat-select [formControl]="formControls.selectedLocalizedStringInfo" [compareWith]="comparisonFunction">
     <mat-option *ngFor="let stringDetails of localizedStringDetails" [value]="stringDetails">
       {{ stringDetails.englishText | deppoh }}
     </mat-option>
