--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -87,15 +87,18 @@
           [values]="source.processedModel.extractedNumbers.other"
         ></model-dump-number-table>
       </mat-card>
-      
-      <toggle-list-ez [contract]="geoFlagsToggleListEzContract" (afterSubmitted)="updateGeoFlagsModel($event)">
+
+      <toggle-list-ez
+        [contract]="geoFlagsToggleListEzContract"
+        (afterSubmitted)="updateGeoFlagsModel($event)"
+      >
         <help-popover-icon cardTitle="Geo Flags" confluenceName="Geo Flags Card">
           <h3>This data is cached</h3>
           <p>The flags displayed in this card are the same as the ones that the client receives.</p>
           <p>
-            This means they are on a rolling 5 minute cache per-machine.
-            The flags displayed here will not update until the UGC is not viewed for around 5 minutes,
-            and so the checkboxes will not update immediately.
+            This means they are on a rolling 5 minute cache per-machine. The flags displayed here
+            will not update until the UGC is not viewed for around 5 minutes, and so the checkboxes
+            will not update immediately.
           </p>
         </help-popover-icon>
       </toggle-list-ez>
