--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.html
@@ -35,7 +35,7 @@
   class="translation-preview"
   appearance="fill"
 >
-  <mat-label>Translation Preview:</mat-label>
+  <mat-label>Translation Preview</mat-label>
   <textarea matInput disabled="true" cdkTextareaAutosize>{{
     selectedLanguageLocalizedString.message
   }}</textarea>
