--- a/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
@@ -53,6 +53,7 @@
           [monitor]="postMonitor"
           monitorDisable
           monitorWarnSnackbar
+          [monitorCompleteSnackbar]="true"
           [verifyWith]="verifySubmission"
         >
           Submit
