--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.scss
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.scss
@@ -1,10 +1,5 @@
 @import '/src/styles/mixins';
-
-.localized-message-selector {
-  width: 100%;
-}
-
-.translation-preview {
+mat-form-field {
   width: 100%;
 }
 
