--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/components/new-localized-message/new-localized-message.component.html
@@ -24,6 +24,6 @@
   </mat-form-field>
 
   <button mat-raised-button color="accent" (click)="createMessage()" [disabled]="!formGroup.valid">
-    Review <mat-icon svgIcon="steward-arrow-right"></mat-icon>
+    Review <mat-icon>arrow_circle_right</mat-icon>
   </button>
 </form>
