--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
@@ -76,6 +76,12 @@
           </td>
         </tr>
         <tr>
+          <th>Notification Type</th>
+          <td>
+            {{ newLocalizedMessage.notificationType | deppoh }}
+          </td>
+        </tr>
+        <tr>
           <th>Localized Message ID</th>
           <td>
             {{ newLocalizedMessage.localizedMessageId }}
