--- a/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.scss
+++ b/StewardClient/src/app/shared/components/localization/select-localized-string/select-localized-string.component.scss
@@ -1,8 +1,8 @@
 @import '/src/styles/mixins';
-mat-form-field {
-  width: 100%;
-}
+// mat-form-field {
+//   width: 100%;
+// }
 
-mat-chip {
-  cursor: pointer;
-}
+// mat-chip {
+//   cursor: pointer;
+// }
